removing gitignore and uploading bundle.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Moosic",
   "version": "1.0.0",
   "description": "Hosted using free gh-pages powered with ReactJS and transpiled with Babel. NPM Packages used (8): `webpack`, `webpack-cli`, `@babel/core`, `@babel/preset-env`, `@babel/preset-react`, `babel-loader`, `react`, `react-dom`.",
-  "main": "app.jsx",
+  "main": "App.jsx",
   "dependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
