--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "Moosic",
   "version": "1.0.0",
-  "description": "Hosted using free gh-pages powered with ReactJS and transpiled with Babel. NPM Packages used (8): `webpack`, `webpack-cli`, `@babel/core`, `@babel/preset-env`, `@babel/preset-react`, `babel-loader`, `react`, `react-dom`.",
+  "description": "Hosted using free gh-pages powered with ReactJS, transpiled with Babel, and styled with LESS. NPM Packages used (8): `webpack`, `webpack-cli`, `@babel/core`, `@babel/preset-env`, `@babel/preset-react`, `babel-loader`, `react`, `react-dom`.",
   "main": "App.jsx",
   "dependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "less": "^3.10.3",
+    "less-watch-compiler": "^1.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "webpack": "^4.41.2",
@@ -15,8 +17,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    , "webpack": "webpack --mode=development --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
