refactoring jsx components for style. renaming project directory for style. removing IE manual polyfill import for style

--- a/less-watch-compiler.config.json
+++ b/less-watch-compiler.config.json
@@ -2,6 +2,6 @@
     "allowedExtensions": [".less"]
     , "minified": false
     , "sourceMap": true
-    , "watchFolder": "frontend/less"
-    , "outputFolder": "frontend/css"
+    , "watchFolder": "src/less"
+    , "outputFolder": "src/css"
 }
