--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "less": "^3.10.3",
     "less-watch-compiler": "^1.14.1",
     "react": "^16.10.2",
+    "react-beautiful-dnd": "^12.0.0",
     "react-dom": "^16.10.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
